[package]
name = "extended"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tcp-server"
path = "src/tcp/server.rs"

[[bin]]
name = "tcp-client"
path = "src/tcp/client.rs"

[[bin]]
name = "udp-server"
path = "src/udp/server.rs"

[[bin]]
name = "udp-client"
path = "src/udp/client.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.18"
byteorder = "1.4.3"
crc32fast = "1.3.2"
