[package]
name = "extended"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simple-tcp"
path = "src/simple_packets/tcp.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.18"
byteorder = "1.4.3"
crc32fast = "1.3.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
